--- a/academic-portfolio.html
+++ b/academic-portfolio.html
@@ -108,10 +108,10 @@
 				
                <ul> 
                 <li><a href="http://www.aa.ntnu.edu.tw/download.php?filename=3293_6470e9c1.pdf&dir=users_sharing/62&title=109%E5%80%8B%E4%BA%BA%E7%94%B3%E8%AB%8B%E4%BA%8C%E9%9A%8E%E6%BA%96%E5%82%99%E6%8C%87%E5%BC%95" target="_blank">(002)國立台灣師範大學</a></li>
-                <li><a href="http://demo.efroip.tw/kghs/resources/WID_6_2_649273eac16f09ba47c2cd3d5d6bafe45a6a3eab/NEWS_6_2_525e86c2e45b391960bc94c9bdb20e2bfc474af4/8d0e5a65477008b006654fa3886546f1.pdf" target="_blank">(003)國立中興大學</a></li>
+                <li><a href="guide/003.pdf" target="_blank">(003)國立中興大學</a></li>
                 <li><a href="http://aca.nccu.edu.tw/exam/109/ApplicationGuide/A02Link.pdf" target="_blank">(006)國立政治大學</a></li>
                 <li><a href="http://admission.nthu.edu.tw/Front/Template/News.aspx?id=zTq4pS6u2k8=&Sn=687" target="_blank">(011)國立清華大學</a></li>
-                <li><a href="http://demo.efroip.tw/kghs/resources/WID_6_2_649273eac16f09ba47c2cd3d5d6bafe45a6a3eab/NEWS_6_2_525e86c2e45b391960bc94c9bdb20e2bfc474af4/d0ee40258c182e6e06d532eda610a1a9.pdf" target="_blank">(012)中國醫藥大學</a></li>
+                <li><a href="guide/012.pdf" target="_blank">(012)中國醫藥大學</a></li>
                 <li><a href="http://web.admission.fcu.edu.tw/109/college/apply/2182-a/109apply_notice.htm" target="_blank">(015)逢甲大學</a></li>
                 <li><a href="http://pdc.adm.ncu.edu.tw/Admission/%e5%90%84%e9%a0%85%e6%8b%9b%e7%94%9f/%e5%a4%a7%e5%ad%b8%e7%94%84%e9%81%b8/109/109%E5%AF%A9%E6%9F%A5%E6%BA%96%E5%82%99%E6%8C%87%E5%BC%95.htm" target="_blank">(016)國立中央大學</a></li>
                </ul>
@@ -124,7 +124,7 @@
                <ul> 
                 <li><a href="https://sites.google.com/gm.ttu.edu.tw/ttuadm/%E5%A4%A7%E5%90%8C%E5%A4%A7%E5%AD%B8109%E5%B9%B4%E5%BA%A6%E5%90%84%E7%B3%BB%E5%80%8B%E4%BA%BA%E7%94%B3%E8%AB%8B%E6%9B%B8%E9%9D%A2%E5%AF%A9%E6%9F%A5%E6%BA%96%E5%82%99%E6%8C%87%E5%BC%95?authuser=0" target="_blank">(019)大同大學</a></li>
                 <li><a href="https://admission.ntou.edu.tw/info.aspx?v=2012" target="_blank">(021)國立臺灣海洋大學</a></li>
-                <li><a href="http://demo.efroip.tw/kghs/resources/WID_6_2_649273eac16f09ba47c2cd3d5d6bafe45a6a3eab/NEWS_6_2_525e86c2e45b391960bc94c9bdb20e2bfc474af4/ede10739f539a8641d18ae1d06c9e44a.pdf" target="_blank">(022)國立高雄師範大學</a></li>
+                <li><a href="guide/022.pdf" target="_blank">(022)國立高雄師範大學</a></li>
                 <li><a href="http://acadaff.ncue.edu.tw/files/14-1021-17323,r154-1.php?Lang=zh-tw" target="_blank">(023)國立彰化師範大學</a></li>
                 <li>
                 <a href="https://adm.ym.edu.tw/files/15-1196-43059,c2-1.php" target="_blank">(025)國立陽明大學{1}</a>
@@ -143,7 +143,7 @@
                 <li><a href="https://admission.utaipei.edu.tw/ezfiles/20/1020/img/1354/895955085.pdf" target="_blank">(035)台北市立大學</a></li>
                 <li><a href="https://bach.ccu.edu.tw/Site/ccuas/dir_qcgfD7" target="_blank">(041)國立中正大學</a></li>
                 <li><a href="https://www.doc.ncnu.edu.tw/admission/index.php?option=com_content&view=article&id=863:-109-&catid=1:2011-05-17-16-16-10&Itemid=1" target="_blank">(058)國立暨南國際大學</a></li>
-                <li><a href="http://demo.efroip.tw/kghs/resources/WID_6_2_649273eac16f09ba47c2cd3d5d6bafe45a6a3eab/NEWS_6_2_525e86c2e45b391960bc94c9bdb20e2bfc474af4/b87bd6ba5a620359564bcb61503a6ba7.pdf" target="_blank">(099)國立臺北大學</a></li>
+                <li><a href="guide/099.pdf" target="_blank">(099)國立臺北大學</a></li>
                 <li><a href="https://admissions.nuk.edu.tw/p/404-1006-34148.php?Lang=zh-tw" target="_blank">(101)國立高雄大學</a></li>
                 <li><a href="http://www.enroll.tcu.edu.tw/?p=10017" target="_blank">(108)慈濟大學</a></li>
                </ul>
