--- a/MIS_FINAL/index.html
+++ b/MIS_FINAL/index.html
@@ -60,7 +60,8 @@ https://templatemo.com/tm-568-digimedia
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h6>MIS期末報告</h6>
+                    <h6><a href="https://han899.github.io/MIS_FINAL/">
+						   MIS期末報告 </a></h6>
                     <h2>埔基醫療大數據分析</h2>
                     <p><font color="#FFE9E9">Medical Big Data Analysis Of Puli Christian Hospital</font></p>
                   </div>
@@ -601,7 +602,108 @@ https://templatemo.com/tm-568-digimedia
 
 
 
-  <footer>
+ <!-- 
+<footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <p>Copyright © 2022 HAN899 All Rights Reserved. </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+-->
+	  
+
+
+  <div id="portfolio" class="our-portfolio section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5">
+          <div class="section-heading wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
+            
+            <div class="line-dec"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="loop owl-carousel">
+            <div class="item">
+              <a href="#">
+                <div class="portfolio-item">
+                <div class="thumb">
+                  <img src="assets/images/" alt="">
+                </div>
+                <div class="down-content">
+                  <h4>埔里</h4>
+                  <span>Puli</span>
+                </div>
+              </div>
+              </a>  
+            </div>
+            <div class="item">
+              <a href="#">
+                <div class="portfolio-item">
+                <div class="thumb">
+                  <img src="assets/images/about-dec-v3.png" alt="">
+                </div>
+                <div class="down-content">
+                  <h4>大數據</h4>
+                  <span>Big Data</span>
+                </div>
+              </div>
+              </a>  
+            </div>
+            <div class="item">
+              <a href="#">
+                <div class="portfolio-item">
+                <div class="thumb">
+                  <img src="assets/images/01.jpg" alt="">
+                </div>
+                <div class="down-content">
+                  <h4>醫療</h4>
+                  <span>Medical</span>
+                </div>
+              </div>
+              </a>  
+            </div>
+            <div class="item">
+              <a href="#">
+                <div class="portfolio-item">
+                <div class="thumb">
+                  <img src="assets/images/" alt="">
+                </div>
+                <div class="down-content">
+                  <h4>在地</h4>
+                  <span>Local</span>
+                </div>
+              </div>
+              </a>  
+            </div>
+            <div class="item">
+              <a href="#">
+                <div class="portfolio-item">
+                <div class="thumb">
+                  <img src="assets/images/contact-dec-v2.png" alt="">
+                </div>
+                <div class="down-content">
+                  <h4>可視化</h4>
+                  <span>Visualization</span>
+                </div>
+              </div>
+              </a>  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+	  
+<footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
