--- a/MIS_FINAL/index.html
+++ b/MIS_FINAL/index.html
@@ -109,6 +109,12 @@ https://templatemo.com/tm-568-digimedia
                 <p>
 					依科別的就診人數來看，前三名分別為小兒科、家醫科、神經科，且男女就醫人數並無太大的差異，除了婦產科及泌尿科之外2015~2017年男女各科看醫人數平均前三名男生依序為小兒科、家醫科、神經科，女生則為家醫科、小兒科、婦產科
 			    </p> 
+				<p>
+				    而根據<a href="https://www.mohw.gov.tw/dl-70641-33764b1d-b662-4c0c-b01a-e57bd6949084.html" 衛生福利部中央健康保險署公布108年度就醫次數統計</a>在台灣高就診科別多跟民眾常生的病有關，前3名分別是是<strong>家醫科</strong>、<strong>內科</strong>和<strong>耳鼻喉科</strong>，因為民眾較長因<strong>呼吸道症狀、頭痛、貧血等狀況</strong>就醫。
+				</p>
+				<p>
+				    與全台數據相比，埔里地區較多就診第一為小兒科，可以推測在地幼童就診相對多，2017年埔里人口總數81,033人，10歲以下5406人，約11.25%的幼童，推測與埔里鄉鎮結構組成有關聯。
+				</p>
               </div>
             </div>
           </div>			
@@ -174,7 +180,7 @@ https://templatemo.com/tm-568-digimedia
                   <div class="line-dec"></div>
                 </div>
                 <p>
-					2015~2017女性就醫科別人數比較特別的是整形外科在2016和2017年時往上攀升，猜測是與醫美盛行有關
+					2015~2017女性就醫科別人數比較特別的是整形外科在2016和2017年時往上攀升，推測是與醫美盛行有關。進而帶動整形外科的就診人數。
 			    </p>
             </div>
 		  </div>			
@@ -199,7 +205,10 @@ https://templatemo.com/tm-568-digimedia
                   <div class="line-dec"></div>
                 </div>
                 <p>
-					2015～2017女生用藥點數：2015～2017年，科別以家醫科、神經科、骨科用藥點數較高
+					2015～2017年女生用藥點數：2015～2017年，科別以家醫科、神經科、骨科用藥點數較高。
+			    </p>
+				<p>
+					家醫科仍奪冠，而其次神經科與骨科部分，推測與年齡結構有關。2017年，全國65以上女生占比14.90%，埔里17.02%相對高出約2%，因此在年齡層較高的狀況下，與傳統產業還較多的狀況下，身體機能較容易退化，而有以上結果。
 			    </p>
               </div>
             </div>
@@ -241,7 +250,7 @@ https://templatemo.com/tm-568-digimedia
                   <div class="line-dec"></div>
                 </div>
                 <p>
-					2015~2017男性就醫科別人數的整形外科也是逐年往上攀升，同樣猜測是與醫美盛行有關，而比較特別的是神經外科的就醫人數在2017年時明顯下降
+					2015~2017男性就醫科別人數的整形外科也是逐年往上攀升，同樣猜測是與醫美盛行有關，而比較特別的是神經外科的就醫人數在2017年時明顯下降。
 			    </p>
             </div>
 		  </div>			
@@ -265,10 +274,13 @@ https://templatemo.com/tm-568-digimedia
                   <h4>2015-2017年男生用藥點數<em></em></h4>
                   <div class="line-dec"></div>
                 </div>
-                <br>2015～2017男生用藥點數:2015年，科別以家醫科、神經、內科用藥點數較高</br>
+                <br>2015～2017男生用藥點數:</br>
+				<br>2015年，科別以家醫科、神經科、內科用藥點數較高</br>
 				<br>2016年，科別以家醫科、神經科、外科用藥點數較高</br>
 				<br>2017年，科別以家醫科、神經科、小兒科用藥點數較高</br>
-			    </p>
+			    <p>
+					家醫科仍奪冠，全國65以上男生占比12.81%，埔里14.86%相對高出約2%，推測人口結構關係，因此在神經科有較多用藥點數。而其他部分每年小有不同，
+				</p>
               </div>
             </div>
 			  
@@ -542,10 +554,10 @@ https://templatemo.com/tm-568-digimedia
                           <div class="row">
                             <div class="col-lg-12 align-self-center">
                               <div class="section-heading  wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
-								<H2><em>109213001 &nbsp&nbsp&nbsp&nbsp</em>游可尉</H2>
-								<H2><em>109213012 &nbsp&nbsp&nbsp&nbsp</em>施紫茵</H2>
-								<H2><em>109213031 &nbsp&nbsp&nbsp&nbsp</em>張中漢</H2>
-								<H2><em>109213055 &nbsp&nbsp&nbsp&nbsp</em>陳筱玲</H2>
+								<H2><em>109213001&nbsp&nbsp&nbsp&nbsp</em>游可尉</H2>
+								<H2><em>109213012&nbsp&nbsp&nbsp&nbsp</em>施紫茵</H2>
+								<H2><em>109213031&nbsp&nbsp&nbsp&nbsp</em>張中漢</H2>
+								<H2><em>109213055&nbsp&nbsp&nbsp&nbsp</em>陳筱玲</H2>
 								<div class="line-dec"></div>
 							  </div>
                             </div>
@@ -635,7 +647,7 @@ https://templatemo.com/tm-568-digimedia
               <a href="#">
                 <div class="portfolio-item">
                 <div class="thumb">
-                  <img src="assets/images/" alt="">
+                  <img src="assets/images/puli.jpg" alt="">
                 </div>
                 <div class="down-content">
                   <h4>埔里</h4>
@@ -661,7 +673,7 @@ https://templatemo.com/tm-568-digimedia
               <a href="#">
                 <div class="portfolio-item">
                 <div class="thumb">
-                  <img src="assets/images/01.jpg" alt="">
+                  <img src="assets/images/medical.jpg" alt="">
                 </div>
                 <div class="down-content">
                   <h4>醫療</h4>
@@ -674,7 +686,7 @@ https://templatemo.com/tm-568-digimedia
               <a href="#">
                 <div class="portfolio-item">
                 <div class="thumb">
-                  <img src="assets/images/" alt="">
+                  <img src="assets/images/local.jpg" alt="">
                 </div>
                 <div class="down-content">
                   <h4>在地</h4>
@@ -687,7 +699,7 @@ https://templatemo.com/tm-568-digimedia
               <a href="#">
                 <div class="portfolio-item">
                 <div class="thumb">
-                  <img src="assets/images/contact-dec-v2.png" alt="">
+                  <img src="assets/images/visualization.jpg" alt="">
                 </div>
                 <div class="down-content">
                   <h4>可視化</h4>
