--- a/MIS_FINAL/index.html
+++ b/MIS_FINAL/index.html
@@ -60,8 +60,7 @@ https://templatemo.com/tm-568-digimedia
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h6><a href="https://han899.github.io/MIS_FINAL/">
-						   MIS期末報告 </a></h6>
+                    <h6><a href="https://han899.github.io/MIS_FINAL/"> MIS期末報告 </a></h6>
                     <h2>埔基醫療大數據分析</h2>
                     <p><font color="#FFE9E9">Medical Big Data Analysis Of Puli Christian Hospital</font></p>
                   </div>
@@ -110,7 +109,7 @@ https://templatemo.com/tm-568-digimedia
 					依科別的就診人數來看，前三名分別為小兒科、家醫科、神經科，且男女就醫人數並無太大的差異，除了婦產科及泌尿科之外2015~2017年男女各科看醫人數平均前三名男生依序為小兒科、家醫科、神經科，女生則為家醫科、小兒科、婦產科
 			    </p> 
 				<p>
-				    而根據<a href="https://www.mohw.gov.tw/dl-70641-33764b1d-b662-4c0c-b01a-e57bd6949084.html" 衛生福利部中央健康保險署公布108年度就醫次數統計</a>在台灣高就診科別多跟民眾常生的病有關，前3名分別是是<strong>家醫科</strong>、<strong>內科</strong>和<strong>耳鼻喉科</strong>，因為民眾較長因<strong>呼吸道症狀、頭痛、貧血等狀況</strong>就醫。
+				    而根據<a href="https://www.mohw.gov.tw/dl-70641-33764b1d-b662-4c0c-b01a-e57bd6949084.html">衛生福利部中央健康保險署公布108年度就醫次數統計 </a>在台灣高就診科別多跟民眾常生的病有關，前3名分別是是<strong>家醫科</strong>、<strong>內科</strong>和<strong>耳鼻喉科</strong>，因為民眾較長因<strong>呼吸道症狀、頭痛、貧血等狀況</strong>就醫。
 				</p>
 				<p>
 				    與全台數據相比，埔里地區較多就診第一為小兒科，可以推測在地幼童就診相對多，2017年埔里人口總數81,033人，10歲以下5406人，約11.25%的幼童，推測與埔里鄉鎮結構組成有關聯。
@@ -557,7 +556,7 @@ https://templatemo.com/tm-568-digimedia
 								<H2><em>109213001&nbsp&nbsp&nbsp&nbsp</em>游可尉</H2>
 								<H2><em>109213012&nbsp&nbsp&nbsp&nbsp</em>施紫茵</H2>
 								<H2><em>109213031&nbsp&nbsp&nbsp&nbsp</em>張中漢</H2>
-								<H2><em>109213055&nbsp&nbsp&nbsp&nbsp</em>陳筱玲</H2>
+								<H2><em>109213055 &nbsp&nbsp&nbsp&nbsp</em>陳筱玲</H2>
 								<div class="line-dec"></div>
 							  </div>
                             </div>
