--- a/MIS_FINAL/index.html
+++ b/MIS_FINAL/index.html
@@ -61,7 +61,7 @@ https://templatemo.com/tm-568-digimedia
                 <div class="row">
                   <div class="col-lg-12">
                     <h6><a href="https://han899.github.io/MIS_FINAL/"> MIS期末報告 </a></h6>
-                    <h2>埔基醫療大數據分析</h2>
+                    <h2>埔基醫療數據分析</h2>
                     <p><font color="#FFE9E9">Medical Big Data Analysis Of Puli Christian Hospital</font></p>
                   </div>
                   <div class="col-lg-12">
@@ -135,7 +135,7 @@ https://templatemo.com/tm-568-digimedia
               <div class="about-left-content">
                 <div class="section-heading">
                   <h6>就診人數分析</h6>
-                  <h4>2015-2017各科看醫人數(不分性別) <em></em></h4>
+                  <h4>2015-2017年各科看醫人數 <em></em></h4>
                   <div class="line-dec"></div>
                   </div>
                   <p>
