--- a/MIS_FINAL/index.html
+++ b/MIS_FINAL/index.html
@@ -581,7 +581,7 @@ https://templatemo.com/tm-568-digimedia
 				<br>糖尿病年輕化，根據台北榮總主治醫師指說，目前20-40歲的青壯年更為嚴重，分析原因可能是嗜喝含糖飲料、高油食物、熬夜等等，因為這些習慣，讓自身得糖尿病的機率大幅上升。</br>
 				<br>2017年統計，全球高達400萬人死於糖尿病或相關併發症，死亡人數約占全球死亡人數的10.7%，而糖尿病在2018年國人十大死因排名第五</br>				
 				<br>&nbsp;</br>
-				<br>腎臟疾病的分析</br>
+				<br><strong>腎臟疾病</strong>的分析</br>
 				<br>據統計國內目前的洗腎病人中約有40%-50%是糖尿病引起的</br>
 				<br>在糖尿病腎臟病變的第四期為明顯尿蛋白時期，某部分人可能會產生高血壓，進而對腎絲球傷害加大，逐漸的腎臟的過濾廢物能力下降。到了糖尿病腎臟病變的第五期就是腎衰竭時期了。所以我們根據圖表推測，腎臟疾病比例高的原因可能跟糖尿有相關。</br>
               </div>
