--- a/MIS_FINAL/index.html
+++ b/MIS_FINAL/index.html
@@ -106,7 +106,7 @@ https://templatemo.com/tm-568-digimedia
                   <div class="line-dec"></div>
                 </div>
                 <p>
-					依科別的就診人數來看，前三名分別為小兒科、家醫科、神經科，且男女就醫人數並無太大的差異，除了婦產科及泌尿科之外，2015~2017年男女各科看醫人數平均前三名男生依序為小兒科、家醫科、神經科，女生則為家醫科、小兒科、婦產科
+					依科別的就診人數來看，<strong>前三名分別為小兒科、家醫科、神經科</strong>，且男女就醫人數並無太大的差異，除了婦產科及泌尿科之外，2015~2017年男女各科<strong>看醫人數平均前三名男生依序為小兒科、家醫科、神經科，女生則為家醫科、小兒科、婦產科</strong>
 			    </p> 
 				<p>
 				    而根據<a href="https://www.mohw.gov.tw/dl-70641-33764b1d-b662-4c0c-b01a-e57bd6949084.html">衛生福利部中央健康保險署公布108年度就醫次數統計 </a>在台灣高就診科別多跟民眾常生的病有關，前3名分別是是<strong>家醫科</strong>、<strong>內科</strong>和<strong>耳鼻喉科</strong>，因為民眾較長因<strong>呼吸道症狀、頭痛、貧血等狀況</strong>就醫。
