--- a/MIS_FINAL/index.html
+++ b/MIS_FINAL/index.html
@@ -105,15 +105,15 @@ https://templatemo.com/tm-568-digimedia
                   <h4>2015-2017各科看醫人數(不分性別) <em></em></h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>
+                <br>
 					依科別的就診人數來看，<strong>前三名分別為小兒科、家醫科、神經科</strong>，且男女就醫人數並無太大的差異，除了婦產科及泌尿科之外，2015~2017年男女各科<strong>看醫人數平均前三名男生依序為小兒科、家醫科、神經科，女生則為家醫科、小兒科、婦產科</strong>
-			    </p> 
-				<p>
+			    </br> 
+				<br>
 				    而根據<a href="https://www.mohw.gov.tw/dl-70641-33764b1d-b662-4c0c-b01a-e57bd6949084.html">衛生福利部中央健康保險署公布108年度就醫次數統計 </a>在台灣高就診科別多跟民眾常生的病有關，前3名分別是是<strong>家醫科</strong>、<strong>內科</strong>和<strong>耳鼻喉科</strong>，因為民眾較長因<strong>呼吸道症狀、頭痛、貧血等狀況</strong>就醫。
-				</p>
-				<p>
+				</br>
+				<br>
 				    與全台數據相比，埔里地區較多就診第一為小兒科，可以推測在地幼童就診相對多，2017年埔里人口總數81,033人，10歲以下5406人，約11.25%的幼童，推測與埔里鄉鎮結構組成有關聯。
-				</p>
+				</br>
               </div>
             </div>
           </div>			
@@ -138,10 +138,10 @@ https://templatemo.com/tm-568-digimedia
                   <h4>2015-2017年各科看醫人數 <em></em></h4>
                   <div class="line-dec"></div>
                   </div>
-                  <p>
+                  <br>
 					依科別的就診人數來看，前三名分別為小兒科、家醫科、神經科，且男女就醫人數並無太大的差異，除了婦產科及泌尿科之外2015~2017年男女各科看醫人數平均前三名男生依序為小兒科、家醫科、神經科，女生則為家醫科、小兒科、婦產科
-			      </p>
-				  <p>男女就醫人數在婦產科及泌尿科的差異是看婦產科的大部分都是女生、泌尿科大多是男生</p>
+			      </br>
+				  <br>男女就醫人數在婦產科及泌尿科的差異是看婦產科的大部分都是女生、泌尿科大多是男生</br>
 			    </div>
               </div>
 
@@ -179,12 +179,12 @@ https://templatemo.com/tm-568-digimedia
                   <h4>2015-2017年女生看醫人數</h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>
+                <br>
 					2015~2017女性就醫科別人數比較特別的是整形外科在2016和2017年時往上攀升，推測是與醫美盛行有關。進而帶動整形外科的就診人數。
-			    </p>
-				<p>
+			    </br>
+				<br>
 					在2015~2017年女生看醫人數的地方，神經外科的看診人數在2017年也有明顯下降。
-				</p>
+				</br>
             </div>
 		  </div>			
         </div>
@@ -207,12 +207,12 @@ https://templatemo.com/tm-568-digimedia
                   <h4>2015-2017年女生用藥點數</h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>
+                <br>
 					2015～2017年女生用藥點數：2015～2017年，科別以家醫科、神經科、骨科用藥點數較高。
-			    </p>
-				<p>
+			    </br>
+				<br>
 					家醫科仍奪冠，而其次神經科與骨科部分，推測與年齡結構有關。2017年，全國65以上女生占比14.90%，埔里17.02%相對高出約2%，因此在年齡層較高的狀況下，與傳統產業還較多的狀況下，身體機能較容易退化，而有以上結果。
-			    </p>
+			    </br>
               </div>
             </div>
 			  
@@ -252,9 +252,9 @@ https://templatemo.com/tm-568-digimedia
                   <h4>2015-2017年男生看醫人數</h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>
+                <br>
 					2015~2017男性就醫科別人數的整形外科也是逐年往上攀升，同樣猜測是與醫美盛行有關，而比較特別的是神經外科的就醫人數在2017年時明顯下降。
-			    </p>
+			    </br>
             </div>
 		  </div>			
         </div>
@@ -306,12 +306,12 @@ https://templatemo.com/tm-568-digimedia
 				<br>2015年，科別以家醫科、神經科、內科用藥點數較高</br>
 				<br>2016年，科別以家醫科、神經科、外科用藥點數較高</br>
 				<br>2017年，科別以家醫科、神經科、小兒科用藥點數較高</br>
-			    <p>
+			    <br>
 					家醫科仍奪冠，全國65以上男生占比12.81%，埔里14.86%相對高出約2%，推測人口結構關係，因此在神經科有較多用藥點數。而其他部分每年小有不同，
-				</p>
-		  		<p>
+				</br>
+		  		<br>
 		  			在這個部分可以講一下男女生在神經外科的看診人數都在2017年下降是因為埔基跟中山醫學大學附設醫院(簡稱中山附醫)在2017年的時候簽了「神經外科合作聯盟契約」，中山附醫會派神經外科的醫師到埔基駐診，因此可以推測如果幫病人看診的醫生是從中山附醫派來的話，看診紀錄會是記在中山附醫那邊，所以埔基男女生在神經外科的看診人數才會都在2017年下降
-				</p>
+				</br>
               </div>
             </div>
 			  
@@ -350,9 +350,9 @@ https://templatemo.com/tm-568-digimedia
                   <h4>附近鄉鎮用藥點數(埔里、仁愛、魚池)<em></em></h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>
+                <br>
 					南投鄉鎮用藥點數分布：因仁愛、埔里、魚池有較明顯數據以這三鄉鎮做探討
-			    </p>
+			    </br>
             </div>
 		  </div>			
         </div>
@@ -420,9 +420,9 @@ https://templatemo.com/tm-568-digimedia
                   <h4>埔里用藥點數</h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>
+                <br>
 					埔里鎮用藥點數:用藥點數多的科別以家醫科、神經科、骨科為主
-			    </p>
+			    </br>
             </div>
 		  </div>			
         </div>
@@ -484,9 +484,9 @@ https://templatemo.com/tm-568-digimedia
                   <h4>仁愛用藥點數</h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>
+                <br>
 					仁愛鄉用藥點數：用藥點數多的科別以家醫科、神經科、眼科為主
-			    </p>
+			    </br>
             </div>
 		  </div>			
         </div>
@@ -550,9 +550,9 @@ https://templatemo.com/tm-568-digimedia
                   <h4>魚池用藥點數</h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>
+                <br>
 					魚池鄉用藥點數：魚池鄉用藥點數多的科別以神經科、家醫科、外科為主
-			    </p>
+			    </br>
             </div>
 		  </div>			
         </div>
