--- a/MIS_FINAL/index.html
+++ b/MIS_FINAL/index.html
@@ -139,9 +139,9 @@ https://templatemo.com/tm-568-digimedia
                   <div class="line-dec"></div>
                   </div>
                   <br>
-					依科別的就診人數來看，前三名分別為小兒科、家醫科、神經科，且男女就醫人數並無太大的差異，除了婦產科及泌尿科之外2015~2017年男女各科看醫人數平均前三名男生依序為小兒科、家醫科、神經科，女生則為家醫科、小兒科、婦產科
+					依科別的就診人數來看，前三名分別為<strong>小兒科、家醫科、神經科</strong>，且男女就醫人數並無太大的差異，除了婦產科及泌尿科之外2015~2017年男女各科看醫人<strong>數平均前三名男生依序為小兒科、家醫科、神經科，女生則為家醫科、小兒科、婦產科</strong>
 			      </br>
-				  <br>男女就醫人數在婦產科及泌尿科的差異是看婦產科的大部分都是女生、泌尿科大多是男生</br>
+				  <br>男女就醫人數在婦產科及泌尿科的差異是看<strong>婦產科的大部分都是女生</strong>、<strong>泌尿科大多是男生</strong></br>
 			    </div>
               </div>
 
@@ -208,7 +208,7 @@ https://templatemo.com/tm-568-digimedia
                   <div class="line-dec"></div>
                 </div>
                 <br>
-					2015～2017年女生用藥點數：2015～2017年，科別以家醫科、神經科、骨科用藥點數較高。
+					2015～2017年女生用藥點數：2015～2017年，科別以<strong>家醫科、神經科、骨科</strong>用藥點數較高。
 			    </br>
 				<br>
 					家醫科仍奪冠，而其次神經科與骨科部分，推測與年齡結構有關。2017年，全國65以上女生占比14.90%，埔里17.02%相對高出約2%，因此在年齡層較高的狀況下，與傳統產業還較多的狀況下，身體機能較容易退化，而有以上結果。
@@ -421,7 +421,7 @@ https://templatemo.com/tm-568-digimedia
                   <div class="line-dec"></div>
                 </div>
                 <br>
-					埔里鎮用藥點數:用藥點數多的科別以家醫科、神經科、骨科為主
+					埔里鎮用藥點數:用藥點數多的科別以<strong>家醫科、神經科、骨科</strong>為主
 			    </br>
             </div>
 		  </div>			
@@ -485,7 +485,7 @@ https://templatemo.com/tm-568-digimedia
                   <div class="line-dec"></div>
                 </div>
                 <br>
-					仁愛鄉用藥點數：用藥點數多的科別以家醫科、神經科、眼科為主
+					仁愛鄉用藥點數：用藥點數多的科別以<strong>家醫科、神經科、眼科</strong>為主
 			    </br>
             </div>
 		  </div>			
@@ -551,7 +551,7 @@ https://templatemo.com/tm-568-digimedia
                   <div class="line-dec"></div>
                 </div>
                 <br>
-					魚池鄉用藥點數：魚池鄉用藥點數多的科別以神經科、家醫科、外科為主
+					魚池鄉用藥點數：魚池鄉用藥點數多的科別以<strong>神經科、家醫科、外科</strong>為主
 			    </br>
             </div>
 		  </div>			
