--- a/MIS_FINAL/index.html
+++ b/MIS_FINAL/index.html
@@ -112,7 +112,7 @@ https://templatemo.com/tm-568-digimedia
 				    而根據<a href="https://www.mohw.gov.tw/dl-70641-33764b1d-b662-4c0c-b01a-e57bd6949084.html">衛生福利部中央健康保險署公布108年度就醫次數統計 </a>在台灣高就診科別多跟民眾常生的病有關，前3名分別是是<strong>家醫科</strong>、<strong>內科</strong>和<strong>耳鼻喉科</strong>，因為民眾較長因<strong>呼吸道症狀、頭痛、貧血等狀況</strong>就醫。
 				</br>
 				<br>
-				    與全台數據相比，埔里地區較多就診第一為小兒科，可以推測在地幼童就診相對多，2017年埔里人口總數81,033人，10歲以下5406人，約11.25%的幼童，推測與埔里鄉鎮結構組成有關聯。
+				    與全台數據相比，<strong>埔里地區較多就診第一名為小兒科</strong>，可以推測在地幼童就診相對多，2017年埔里人口總數81,033人，10歲以下5406人，約11.25%的幼童，推測與埔里鄉鎮結構組成有關聯。
 				</br>
               </div>
             </div>
